# vera-agent

./: .gitignore  CONTRIBUTING.md  DEPLOY_ALIYUN.md  LICENSE  README.md  deploy.sh  start.sh  stop.sh
backend/: .demo.env  .gitignore  pyproject.toml
backend/agent/: __init__.py  chat.py  config.py  desktop.py  emitter.py  main.py  protocol.py
backend/agent/core/: pause_gate.py
backend/agent_runtime/: base.py  registry.py  runner.py  stream_emitter.py
backend/agent_runtime/claude/: adapter.py  client.py  config.py  container_pool.py  direct_client.py  docker_client.py  runner.py
backend/agent_runtime/claude/docker/: Dockerfile  runner.py  stream_emitter.py  vera_scheduler_mcp.py
backend/agent_runtime/normal/: adapter.py  llm_client.py
backend/agent_runtime/wechat/: __init__.py  ilink_client.py  monitor.py
backend/api/: __init__.py  access.py  api_response.py  database.py  llm_client.py  main.py  mcp_jwt.py  pyproject.toml  skill_zip.py  util.py
backend/api/auth/: dingtalk.py
backend/api/models/: models.py  seed.py
backend/api/routers/: admin.py  agents.py  auth.py  chat.py  config_files.py  history.py  mcp.py  messages.py  model_configs.py  permissions.py  push.py  schedules.py  session_settings.py  sessions.py  skills.py  wechat.py  wecom.py
backend/api/scheduler/: __init__.py  cron_util.py  dispatcher.py
backend/api/schemas/: __init__.py  schemas.py
backend/api/services/: __init__.py  oss_client.py
deploy/: vera-backend.service  vera-frontend.service
docs/: websocket-chat-protocol.md
frontend/: CC模式创建(4).html  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ModelConfigModal.tsx
frontend/src/components/ui/: FormCard.tsx  FormRow.tsx
frontend/src/pages/Admin/: Users.tsx
frontend/src/pages/AgentList/: AgentCard.tsx  AgentListHeader.tsx  index.module.less  index.tsx
frontend/src/pages/CreateAgent/: BasicInfoForm.tsx  ModeSelectModal.tsx  index.tsx
frontend/src/pages/EditAgent/: index.module.less  index.tsx  useChatSocket.ts
frontend/src/pages/EditAgent/components/: FormParts.tsx
frontend/src/pages/EditAgent/panels/: BaseConfigPanel.tsx  BasicInfoPanel.tsx  ModelConfigPanel.tsx  PermissionPanel.tsx  SchedulePanel.tsx  SkillConfigPanel.tsx  ToolConfigPanel.tsx
frontend/src/pages/EditAgent/sidebar/: ConfigNav.tsx  SessionList.tsx  SystemSidebar.tsx
frontend/src/pages/Login/: DingtalkCallback.tsx  index.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: adminService.ts  agentService.ts  api.ts  authService.ts  authUser.ts  configFileService.ts  mcpService.ts  modelConfigService.ts  permissionService.ts  scheduleService.ts  sessionService.ts  skillService.ts
frontend/src/services/mock/: agentMocks.ts  index.ts
frontend/src/stores/: useAgentStore.ts  useAuthStore.ts  useUIStore.ts
frontend/src/styles/: global.less  mixins.less  theme.ts  tokens.ts  variables.less
frontend/src/types/: agent.ts  api.ts  config.ts  history.ts  mcp.ts  modelConfig.ts  permission.ts  push.ts  session.ts  skill.ts  tool.ts
