[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vera-backend"
version = "0.1.0"
description = "Vera backend (FastAPI + SQLite + WebSocket chat)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "anyio>=4.0",
    "regex>=2024.1",
    "pathspec>=0.12",
    # Management API: SQLite + async ORM
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # multipart uploads (skill .zip) + WebSocket chat
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # YAML parsing (skill zip manifests)
    "pyyaml>=6.0",
    # WeChat iLink (QR code generation + media encryption)
    "qrcode>=7.4",
    "cryptography>=42",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "agent_runtime", "agent_runtime.claude", "agent_runtime.normal"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]
claude = [
    "claude-agent-sdk>=0.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
