[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vera-backend"
version = "0.1.0"
description = "Vera backend (FastAPI + SQLite + WebSocket chat)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138",
    "uvicorn>=0.49",
    "pydantic>=2.13",
    "httpx>=0.28",
    "sse-starlette>=3.4",
    "anyio>=4.14",
    "regex>=2026.5",
    "pathspec>=1.1",
    # Management API: SQLite + async ORM
    "sqlalchemy>=2.0",
    "aiosqlite>=0.22",
    # multipart uploads (skill .zip) + WebSocket chat
    "python-multipart>=0.0.32",
    "websockets>=16.0",
    # YAML parsing (skill zip manifests)
    "pyyaml>=6.0",
    # WeChat iLink (QR code generation + media encryption)
    "qrcode>=8.2",
    "Pillow>=12.2",
    "cryptography>=42,<45",
    # RS256 JWT signing for outbound MCP calls (resource servers verify with paired public key)
    "pyjwt>=2.13",
    # Claude Agent SDK (agent 运行时)
    "claude-agent-sdk>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "agent_runtime", "agent_runtime.claude", "agent_runtime.normal"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
